Checkout config - client key, environment, locale

--- a/force-app/main/default/classes/AdyenUtil.cls
+++ b/force-app/main/default/classes/AdyenUtil.cls
@@ -1,9 +1,17 @@
 public inherited sharing class AdyenUtil {
-    public static Merchant__mdt getConfiguredMerchantAccount(ccrz__E_Cart__c cart) {
-        Map<String, Object> mapAdyenParams = Util.getCCConfig('pmt_adyencc', cart.ccrz__Storefront__c, true, true);
-        Map<String, String> mapConfigs = (Map<String, String>) mapAdyenParams.get(ccrz.ccAPIConfig.CONFIGURATIONS);
-        //TODOBAS refactor
-        return Util.getConfigByName('AdyenMerchantConfig');
+    public static String getClientKey(){
+        Merchant__mdt merchant = Util.getConfigByName('AdyenMerchantConfig');
+        return merchant.Client_Key__c;
+    }
+
+    public static String getAdyenEnvironment(){
+        Merchant__mdt merchant = Util.getConfigByName('AdyenMerchantConfig');
+        if(merchant.PaymentMethods_Endpoint__c.contains('checkout-live')
+        && merchant.Payment_Endpoint__c.contains('checkout-live')
+        && merchant.Payments_Details_Endpoint__c.contains('checkout-live')){
+            return 'live';
+        }
+        return 'test';
     }
 
     public static String getConfiguredCaptureDelay(ccrz__E_Cart__c cart) {
