--- a/force-app/main/default/classes/cc_adyencc_hk_Payment.cls
+++ b/force-app/main/default/classes/cc_adyencc_hk_Payment.cls
@@ -28,10 +28,12 @@ global class cc_adyencc_hk_Payment extends ccrz.cc_hk_Payment {
         String stringPaymentMethodsResponse = Util.makeAdyenCompatible(jsonPaymentMethodsResponse);
         Map<String,Object> returnData =  super.fetchPaymentTypes(inputData);
         Map<String,Object> paymentTypes = (Map<String,Object>)returnData.get('paymentTypes');
-        Map<String,Object> adyencc = (Map<String,Object>)paymentTypes.get('adyencc');
-        adyencc.put('adyenPaymentMethods', stringPaymentMethodsResponse);
-        adyencc.put('adyenClientKey', AdyenUtil.getClientKey());
-        adyencc.put('adyenEnvironment', AdyenUtil.getAdyenEnvironment());
+        if(paymentTypes.size() > 0){
+            Map<String,Object> adyencc = (Map<String,Object>)paymentTypes.get('adyencc');
+            adyencc.put('adyenPaymentMethods', stringPaymentMethodsResponse);
+            adyencc.put('adyenClientKey', AdyenUtil.getClientKey());
+            adyencc.put('adyenEnvironment', AdyenUtil.getAdyenEnvironment());
+        }
         return returnData;
     }
 
