--- a/force-app/main/default/classes/PmtAdyenPayController.cls
+++ b/force-app/main/default/classes/PmtAdyenPayController.cls
@@ -10,11 +10,9 @@ global with sharing class PmtAdyenPayController {
     global static ccrz.cc_RemoteActionResult placeOrderAdyen(ccrz.cc_RemoteActionContext ctx, String stateData) {
         ccrz.cc_RemoteActionResult res = ccrz.cc_CallContext.init(ctx);
         try {
-            ccrz.cc_hk_Payment paymentHook = ccrz.cc_hk_Payment.getInstance(null);
             ccrz__E_Cart__c cart = AdyenUtil.getCartByEncryptedId(ctx.currentCartId);
-            Map<String, Object> paymentProcessorInput = AdyenController.createProcessorInput(ctx.currentCartId, stateData, 'payments');
-            Map<String, Object> processResult = paymentHook.processPayment(paymentProcessorInput);
-            Map<String, Object> paymentResult = (Map<String, Object>) processResult.get('paymentResult');
+            Map<String, Object> adyenResult = AdyenController.callAdyenPaymentHook(ctx.currentCartId, stateData, 'payments');
+            Map<String, Object> paymentResult = (Map<String, Object>) adyenResult.get('paymentResult');
             if (!(Boolean)paymentResult.get('isFinal')) {
                 cart.AdyenPaymentData__c = (String)paymentResult.get('paymentData');
                 update cart;
@@ -24,9 +22,9 @@ global with sharing class PmtAdyenPayController {
             }
             if (paymentResult.get('resultCode') == PaymentsResponse.ResultCodeEnum.AUTHORISED) {
                 Map<String, String> additionalData = (Map<String, String>)paymentResult.get('additionalData');
-                AdyenController.checkToStorePaymentMethod(additionalData, res);
+                AdyenController.checkToStorePaymentMethod(additionalData, res.inputContext.storeFront);
                 //create order
-                Map<String, Object> orderResult = AdyenController.placeOrder(processResult, cart.ccrz__EncryptedId__c);
+                Map<String, Object> orderResult = AdyenController.placeOrder(adyenResult, cart.ccrz__EncryptedId__c);
                 Map<String, String> orderIds = AdyenController.validateOrderResult(orderResult);
                 //Return orderId for confirmation page
                 paymentResult.put('orderIdEnc', orderIds.get('orderIdEnc'));
@@ -49,5 +47,12 @@ global with sharing class PmtAdyenPayController {
             ccrz.ccLog.close(res);
         }
         return res;
+    }
+
+    @RemoteAction
+    global static String handleOnAdditionalDetails(ccrz.cc_RemoteActionContext ctx, String details){
+        ccrz.cc_RemoteActionResult res = ccrz.cc_CallContext.init(ctx);
+        String storefrontName = res.inputContext.storeFront;
+        return AdyenController.handleOnAdditionalDetails(details, storefrontName);
     }
 }
