PW-5129 Added paymentResult, enable TransactionPaymentTrigger (#40)
* Added paymentResult, enable TransactionPaymentTrigger

--- a/force-app/main/default/classes/BatchCapturePayment.cls
+++ b/force-app/main/default/classes/BatchCapturePayment.cls
@@ -28,11 +28,9 @@ global with sharing class BatchCapturePayment implements Database.Batchable<sObj
 
                     if (mapStoreNameMerchant.containsKey(tp.ccrz__Storefront__c)) {
                         merchant = mapStoreNameMerchant.get(tp.ccrz__Storefront__c);
+
                     } else {
-                        Boolean useCache = !Test.isRunningTest();
-                        Map<String, Object> mapAdyenParams = Util.getCCConfig('pmt_adyencc', tp.ccrz__Storefront__c, true, useCache);
-                        Map<String, String> mapConfigs = (Map<String, String>) mapAdyenParams.get(ccrz.ccAPIConfig.CONFIGURATIONS);
-                        merchant = Util.getConfigByName(mapConfigs.get('pmt_adyencc.config'));
+                        merchant = Util.getConfigByName('AdyenMerchantConfig');
                         mapStoreNameMerchant.put(tp.ccrz__Storefront__c, merchant);
                     }
 
@@ -54,6 +52,7 @@ global with sharing class BatchCapturePayment implements Database.Batchable<sObj
                         listToUpsert.add(tp);
                     }
                 } catch (Exception ex) {
+                    System.debug('Error while payment capture ' + ex.getMessage());
                     tp.Capture_Payment__c = false;
                     tp.Integration_Messages__c = ex.getMessage();
                     listToUpsert.add(tp);
