--- a/force-app/main/default/classes/PmtAdyenPayControllerTest.cls
+++ b/force-app/main/default/classes/PmtAdyenPayControllerTest.cls
@@ -1,7 +1,8 @@
 @isTest
 private class PmtAdyenPayControllerTest {
-    @isTest
+    @testSetup
     private static void testData(){
+
         Account acc = AdyenTestDataFactory.createAccount('account');
         insert acc;
 
@@ -20,10 +21,16 @@ private class PmtAdyenPayControllerTest {
         ccrz__E_CartItem__c cartItem = AdyenTestDataFactory.createCCCartItem(cart, prd);
         insert cartItem;
 
+    }
+
+    @isTest
+    private static void testOrderSuccess(){
+        ccrz__E_Cart__c cart = [SELECT Id, ccrz__EncryptedId__c FROM ccrz__E_Cart__c][0];
+
         ccrz.cc_RemoteActionContext ctx = new ccrz.cc_RemoteActionContext();
         ctx.storefront = 'DefaultStore';
-        ctx.currentCartId = '123123';
-        string stateData = 'stateDataTest';
+        ctx.currentCartId = cart.ccrz__EncryptedId__c;
+        string stateData = '{"riskData":{"clientData":"eyJ2ZXJzaW.."},"paymentMethod":{"type":"scheme","holderName":"Bas","encryptedCardNumber":"adyenjs_0_1_25$YtGy..","encryptedExpiryMonth":"adyenjs_0_1_25$gs6..","encryptedExpiryYear":"adyenjs_0_1_25$dLg..","encryptedSecurityCode":"adyenjs_0_1_25$Qo.."},"browserInfo":{"acceptHeader":"*\/*","colorDepth":24,"language":"en-GB","javaEnabled":false,"screenHeight":900,"screenWidth":1440,"userAgent":"Mozilla\/5.0 (Macintosh; Intel Mac OS X 10_14_6) AppleWebKit\/537.36 (KHTML, like Gecko) Chrome\/92.0.4515.107 Safari\/537.36","timeZoneOffset":-120}}';
 
         Test.setMock(HttpCalloutMock.class, new Mocks.AdyenPaymentsSuccessMock());
         Test.startTest();
