Adding Test classes for transactionPaymentHandler and PostInstallScript

--- a/force-app/main/default/classes/Mocks.cls
+++ b/force-app/main/default/classes/Mocks.cls
@@ -1,6 +1,14 @@
 //
 // Contains mock structures for testing the Adyen endpoints.
 public class Mocks {
+    //mock response for capture success - may need change as per the updated Adyen Capture method
+      public static CaptureResponse mockCaptureResponse() {
+         CaptureResponse resp = new CaptureResponse();
+         resp.pspReference = 'abcd1234';
+         resp.response = '[capture-received]';
+         return resp;
+    }
+
     public static String mockPaymentsResponseSuccess() {
         return '{ "additionalData": { "cardSummary": "1111", "expiryDate": "3/2030", "cardHolderName": "John Smith", "paymentMethod": "visa" }, "pspReference": "8xxxxxxxxx", "resultCode": "Authorised" }';
     }
@@ -30,6 +38,19 @@ public class Mocks {
             HttpResponse res = new HttpResponse();
             res.setHeader('Content-Type', 'text/json');
             res.setBody(mockPaymentsResponseFailed());
+            res.setStatusCode(200);
+            return res;
+        }
+    }
+
+    public class AdyenCaptureSuccessMock implements HttpCalloutMock {
+
+        public HTTPResponse respond(HTTPRequest req) {
+
+            // Create a fake response
+            HttpResponse res = new HttpResponse();
+            res.setHeader('Content-Type', 'text/json');
+            res.setBody(JSON.serialize(mockCaptureResponse()));
             res.setStatusCode(200);
             return res;
         }
